# inkless

./: .gitignore  pyproject.toml
app/: __init__.py
app/controllers/: post.py  user.py
app/docs/: about.md  policy.md  tos.md
app/models/: post.py  user.py
app/static/: style.css
app/templates/: about.html  base.html  create.html  index.html  load.html  policy.html  post.html  posts.html  profile.html  tos.html
app/templates/components/: card.html  cards.html  createform.html  footer.html  nav.html
app/utils/: __init__.py
migrations/versions/: 0770f4c4edca_.py  07afbb1e55f7_.py  1dc096e74aa5_.py  4b87e5d974d9_.py  752996f91722_.py  abba0fa2ab66_.py  c235ce30ac11_.py  c7a037010cc5_.py  c840dc838468_.py
