[tool.poetry]
name = "confess"
version = "0.1.0"
description = ""
authors = ["grandmaster <grandmaster75382@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
Flask = "^3.1.0"
Flask-SQLAlchemy = "^3.1.1"
Flask-Migrate = "^4.0.7"
shortuuid = "^1.0.13"
faker = "^33.1.0"
flask-session = "^0.8.0"
python-dotenv = "^1.0.1"
markdown = "^3.7"
humanize = "^4.11.0"
flask-cors = "^5.0.0"
flask-limiter = "^3.9.2"
imgurpython = "^1.1.7"
flask-imgur = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
